--- a/Comfizen/MainWindow.xaml
+++ b/Comfizen/MainWindow.xaml
@@ -1,5 +1,4 @@
-﻿<!-- START OF FILE MainWindow.xaml -->
-<Window x:Class="Comfizen.MainWindow"
+﻿<Window x:Class="Comfizen.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -14,7 +13,10 @@
         Background="{StaticResource PrimaryBackground}"
         Foreground="{StaticResource TextBrush}"
         Style="{StaticResource CustomWindowStyle}"
-        KeyDown="MainWindow_OnKeyDown">
+        KeyDown="MainWindow_OnKeyDown"
+        AllowDrop="True"
+        DragOver="Window_DragOver"
+        Drop="Window_Drop">
     <Window.DataContext>
         <local:MainViewModel/>
     </Window.DataContext>
@@ -72,11 +74,9 @@
 
             <!-- Row 0: The TabControl for the tab headers ONLY -->
             <TabControl Grid.Row="0" ItemsSource="{Binding OpenTabs}" SelectedItem="{Binding SelectedTab, Mode=TwoWay}" Margin="5,0,5,0" Background="Transparent" BorderThickness="0">
-                <!-- START OF CHANGES: Explicitly define an empty content template -->
                 <TabControl.ContentTemplate>
                     <DataTemplate />
                 </TabControl.ContentTemplate>
-                <!-- END OF CHANGES -->
                 <TabControl.Style>
                     <Style TargetType="TabControl">
                         <Setter Property="Visibility" Value="Visible"/>
@@ -753,4 +753,3 @@
         </Grid>
     </Grid>
 </Window>
-<!-- END OF FILE MainWindow.xaml -->
