--- a/Comfizen/App.xaml
+++ b/Comfizen/App.xaml
@@ -561,6 +561,13 @@
             <CheckBox IsChecked="{Binding IsChecked, Mode=TwoWay}" VerticalAlignment="Center" />
         </DataTemplate>
         
+        <DataTemplate x:Key="ScriptButtonTemplate" DataType="{x:Type local:ScriptButtonFieldViewModel}">
+            <Button Content="{Binding Name}"
+                    Command="{Binding ExecuteScriptCommand}"
+                    CommandParameter="{Binding ActionName}"
+                    HorizontalAlignment="Left" />
+        </DataTemplate>
+        
         <Style x:Key="LockToggleButtonStyle" TargetType="ToggleButton">
             <Setter Property="Width" Value="24"/>
             <Setter Property="Height" Value="24"/>
@@ -621,6 +628,7 @@
                                      AnyTypeTemplate="{StaticResource AnyTypeTemplate}" 
                                      InpaintTemplate="{StaticResource InpaintTemplate}"
                                      MarkdownTemplate="{StaticResource MarkdownTemplate}"
+                                     ScriptButtonTemplate="{StaticResource ScriptButtonTemplate}"
         />
 
     </Application.Resources>
