--- a/Comfizen/MainWindow.xaml
+++ b/Comfizen/MainWindow.xaml
@@ -233,15 +233,21 @@
                                                             <ControlTemplate x:Key="NormalFieldLayoutTemplate" TargetType="ContentControl">
                                                                 <Grid Margin="0,4">
                                                                     <Grid.ColumnDefinitions>
+                                                                        <ColumnDefinition Width="Auto"/>
                                                                         <ColumnDefinition Width="Auto" MinWidth="120"/>
                                                                         <ColumnDefinition Width="*" />
                                                                     </Grid.ColumnDefinitions>
-                                                                    <Border Grid.ColumnSpan="2" Opacity="0.5">
+                                                                    
+                                                                    <Border Grid.Column="0" Width="3" CornerRadius="1.5" HorizontalAlignment="Left">
                                                                         <Border.Background>
-                                                                            <Binding Path="HighlightColor" Converter="{StaticResource HexToBrushConverter}"/>
+                                                                            <MultiBinding Converter="{StaticResource PriorityColorToBrushConverter}">
+                                                                                <Binding Path="HighlightColor"/>
+                                                                                <Binding Path="DataContext.HighlightColor" RelativeSource="{RelativeSource AncestorType=Expander}"/>
+                                                                            </MultiBinding>
                                                                         </Border.Background>
                                                                     </Border>
-                                                                    <StackPanel Grid.Column="0" Orientation="Horizontal" Margin="0,0,10,0" VerticalAlignment="Center">
+                                                                    
+                                                                    <StackPanel Grid.Column="1" Orientation="Horizontal" Margin="10,0,10,0" VerticalAlignment="Center">
                                                                         <TextBlock Text="{Binding Name}" ToolTip="{Binding Path}"/>
                                                                         <TextBlock Margin="5,0,0,0" Foreground="{StaticResource TextSecondaryBrush}" VerticalAlignment="Center">
                                                                             <TextBlock.Style>
@@ -254,7 +260,7 @@
                                                                             </TextBlock.Style>
                                                                         </TextBlock>
                                                                     </StackPanel>
-                                                                    <ContentPresenter Grid.Column="1" Content="{Binding}" ContentTemplateSelector="{StaticResource FieldTemplateSelector}" />
+                                                                    <ContentPresenter Grid.Column="2" Content="{Binding}" ContentTemplateSelector="{StaticResource FieldTemplateSelector}" />
                                                                 </Grid>
                                                             </ControlTemplate>
                                                             <ControlTemplate x:Key="InpaintLayoutTemplate" TargetType="ContentControl">
